k8s/website/pgadmin/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: professional-website
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: database
      app.kubernetes.io/instance: pgadmin
      app.kubernetes.io/name: pgadmin
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: pgadmin
        app.kubernetes.io/name: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
